samples/_failures_safe/1761370295_5d25e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5696020f.c: In function ‘main’:
./samples/SAFE/__tmp_5696020f.c:154: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_5696020f.c:153:9: error: expected declaration or statement at end of input
  153 |         if
      |         ^~
./samples/SAFE/__tmp_5696020f.c:153:9: error: expected declaration or statement at end of input
